# discord-oauth-rust

./: Cargo.toml  README.md
src/: lib.rs  models.rs  oauth.rs
